--- a/main.css
+++ b/main.css
@@ -118,6 +118,7 @@ body {
   width: 250px;
   height: 100%;
   padding: 28px 24px;
+  display: none;
 }
 .modal-navbar__background {
   background-color: rgba(0, 0, 0, 0.7);
@@ -126,6 +127,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
   display: none;
 }
 .modal-navbar__items {
@@ -144,6 +146,49 @@ body {
 }
 .modal-navbar__close-icon:hover {
   cursor: pointer;
+}
+
+.gallery__image-container {
+  border: solid 1px blue;
+  height: 300px;
+  width: 100%;
+  background-image: url("../images/image-product-1.jpg");
+  background-size: cover;
+  background-position-y: -35px;
+}
+.gallery__prev {
+  background-color: hsl(0deg, 0%, 100%);
+  width: 40px;
+  height: 40px;
+  padding: 12px;
+  border-radius: 50%;
+  position: absolute;
+  top: 185px;
+  left: 15px;
+}
+.gallery__prev:hover {
+  cursor: pointer;
+}
+.gallery__next {
+  background-color: hsl(0deg, 0%, 100%);
+  width: 40px;
+  height: 40px;
+  padding: 12px;
+  border-radius: 50%;
+  position: absolute;
+  top: 185px;
+  left: 320px;
+}
+.gallery__next:hover {
+  cursor: pointer;
+}
+.gallery__thumbnail {
+  display: none;
+}
+@media (min-width: 1115px) {
+  .gallery__thumbnail {
+    display: block;
+  }
 }
 
 .main-container {
