--- a/main.css
+++ b/main.css
@@ -250,6 +250,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 16px;
+  transition: all 100ms ease-in-out;
 }
 .details__button:hover {
   cursor: pointer;
@@ -261,6 +262,7 @@ body {
   background-color: hsl(223deg, 64%, 98%);
   height: 57px;
   display: flex;
+  margin-bottom: 15px;
 }
 .input__minus {
   width: 25px;
@@ -287,6 +289,66 @@ body {
 }
 .input__plus:hover {
   cursor: pointer;
+}
+
+.cart-modal {
+  display: none;
+  background-color: hsl(0deg, 0%, 100%);
+  width: 360px;
+  height: 260px;
+  border-radius: 8px;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  top: 75px;
+  right: 6px;
+}
+.cart-modal__title {
+  font-weight: 700;
+  padding: 24px;
+  border-bottom: 1px solid hsl(220deg, 14%, 75%);
+}
+.cart-modal__checkout-container {
+  padding: 24px;
+}
+.cart-modal__details-container {
+  border: 1px solid red;
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+  display: flex;
+  justify-content: space-between;
+  color: hsl(219deg, 9%, 45%);
+}
+.cart-modal__image {
+  width: 50px;
+  border-radius: 4px;
+}
+.cart-modal__price span {
+  color: black;
+  font-weight: 700;
+}
+.cart-modal__delete:hover {
+  cursor: pointer;
+}
+.cart-modal__checkout-btn {
+  background-color: hsl(26deg, 100%, 55%);
+  height: 57px;
+  width: 100%;
+  border-radius: 8px;
+  border: none;
+  color: hsl(0deg, 0%, 100%);
+  font-size: 0.9em;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  transition: all 100ms ease-in-out;
+}
+.cart-modal__checkout-btn:hover {
+  cursor: pointer;
+  opacity: 0.6;
+  box-shadow: 0px 4px 15px -7px hsl(26deg, 100%, 55%);
 }
 
 .main-container {
