--- a/sass/_details.scss
+++ b/sass/_details.scss
@@ -2,7 +2,7 @@
 @use 'mixins' as m;
 
 .details{
-    border: 1px solid yellow;
+    //border: 1px solid yellow;
     padding: 24px;
 
     &__company{
@@ -56,5 +56,30 @@
 
     &__button{
         @include m.button;
+    }
+
+    @media (min-width: 1115px){
+        width: 446px;
+        padding-top: 60px;
+
+        &__title{
+            font-size: 2.7em;
+            margin-bottom: 40px;
+        }
+
+        &__description{
+            font-size: 1.1em;
+            margin-bottom: 37px;
+        }
+
+        &__prices{
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        &__product-quantity{
+            display: flex;
+            gap: 32px;
+        }
     }
 }
