--- a/main.css
+++ b/main.css
@@ -120,16 +120,6 @@ body {
   padding: 28px 24px;
   display: none;
 }
-.modal-navbar__background {
-  background-color: rgba(0, 0, 0, 0.7);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  display: none;
-}
 .modal-navbar__items {
   display: flex;
   flex-direction: column;
@@ -402,9 +392,94 @@ body {
   box-shadow: 0px 4px 15px -7px hsl(26deg, 100%, 55%);
 }
 
+.modal-gallery {
+  width: 550px;
+}
+.modal-gallery__background {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.modal-gallery__close-container {
+  text-align: end;
+  height: 30px;
+}
+.modal-gallery__close {
+  width: 16px;
+}
+.modal-gallery__close:hover {
+  cursor: pointer;
+  content: url(../images/icon-close-orange.svg);
+}
+.modal-gallery__image-container {
+  background-image: url(../images/image-product-1.jpg);
+  height: 550px;
+  background-size: cover;
+  border-radius: 16px;
+  margin-bottom: 32px;
+  position: relative;
+}
+.modal-gallery__thumbnails {
+  display: flex;
+  justify-content: space-between;
+  width: 450px;
+  margin: 0 auto;
+}
+.modal-gallery__thumbnail {
+  width: 90px;
+  border-radius: 1rem;
+  transition: outline 50ms ease-in;
+}
+.modal-gallery__thumbnail:hover {
+  cursor: pointer;
+  outline: 2px solid hsl(26deg, 100%, 55%);
+}
+.modal-gallery__prev {
+  background-color: hsl(0deg, 0%, 100%);
+  width: 40px;
+  height: 40px;
+  padding: 12px;
+  border-radius: 50%;
+  position: absolute;
+  top: 190px;
+  left: -15px;
+}
+.modal-gallery__prev:hover {
+  cursor: pointer;
+}
+@media (min-width: 1115px) {
+  .modal-gallery__prev {
+    display: block;
+  }
+}
+.modal-gallery__next {
+  background-color: hsl(0deg, 0%, 100%);
+  width: 40px;
+  height: 40px;
+  padding: 12px;
+  border-radius: 50%;
+  position: absolute;
+  top: 190px;
+  left: 520px;
+}
+.modal-gallery__next:hover {
+  cursor: pointer;
+}
+@media (min-width: 1115px) {
+  .modal-gallery__next {
+    display: block;
+  }
+}
+
 .main-container {
   width: 375px;
-  border: 1px solid black;
   margin: 0 auto;
   position: relative;
 }
