--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -7,10 +7,10 @@
 @use 'details';
 @use 'input';
 @use 'modal-cart';
+@use 'modal-gallery';
 
 .main-container{
    width: 375px;
-   border: 1px solid black;
    margin: 0 auto;
    position: relative; 
 
