--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -46,7 +46,7 @@
     &__cart{
         position: relative;
         &--notification{
-            //display: none;
+            display: none;
             width: 15px;
             background-color: colores.$Orange;
             width: 15px;
