--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -2,13 +2,13 @@
 
 @mixin modal-background{
     background-color: colores.$Black-modal;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 1;
-    //display: none;
+    overflow: hidden;
 }
 
 @mixin image-btn($top, $left, $showDesktop){
