--- a/sass/_modal-navbar.scss
+++ b/sass/_modal-navbar.scss
@@ -3,13 +3,16 @@
 
 .modal-navbar{
     &__background{
-        //@include mixins.modal-background;
+        @include mixins.modal-background;
+        transition: 200ms transform ease-in-out,
+        250ms opacity ease-in;
+        transform: translateX(-100%);
+        opacity: 0.1;
     }
     background-color: colores.$White;
     width: 250px;
     height: 100%;
     padding: 28px 24px;
-    display: none;
 
     &__items{ 
         display: flex;
@@ -29,5 +32,8 @@
 
     &__close-icon:hover{
         cursor: pointer;
+        &:hover{
+            content: url(../images/icon-close-orange.svg);
+        }
     }
 }
