--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,6 +13,7 @@
    width: 375px;
    margin: 0 auto;
    position: relative; 
+   overflow-x: hidden;
 
    
    @media (min-width: 1115px){
@@ -28,4 +29,11 @@
     }
 }
 
+.d-block{
+    display: block;
+}
 
+.move-x{
+    transform: translateX(0);
+    opacity: initial;
+}
